--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -23,6 +23,7 @@
             <li><a href="techstack.html">Tech Stack</a></li>
             <li><a href="contributor/contributor.html">Contribute</a></li>
             <li><a href="#community">Community</a></li>
+            <li><a href="review.html">Review</a></li>
             <li><a href="login.html">Login</a></li>
           </ul>
         </nav>
