--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -78,8 +78,9 @@
           >
           <a href="faq.html" class="text-white hover:underline">FAQ</a>
           <a href="feedback.html" class="text-white hover:underline"
-            >Feedback</a
-          >
+            > Feedback </a>
+          <a href="privacy.html" class="text-white hover:underline"
+            > Privacy Policy </a>
         </div>
       </div>
 
