scroll to top button added in faq page

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -103,7 +103,7 @@
     </footer>
 
     <script src="script.js"></script>
-    <script src="toggle.js"></script>
+    <script src="event.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
         AOS.init({duration: 600, once: false });
