logout feature done

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -24,6 +24,7 @@
         <p class="login-text">Don't have an account? <a href="signup.html" class="login-link">Sign Up</a></p>
         <p id="login-message" class="login-message"></p>
     </div>
+    <script src="script.js"></script>
 
 </body>
 </html>
