--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -16,14 +16,14 @@
     <header class="bg-blue-600 text-white p-6">
       <div class="container">
         <div class="menu-toggle" id="menu-toggle">&#9776;</div>
-        <a href="index.html"><img src="logo.png" alt="Samnwadh" /></a>
+        <a href="index.html"><img src="logo.webp" alt="Samnwadh" /></a>
         <nav class="navbar" id="navbar">
           <ul class="nav-links">
             <li><a href="#features">Features</a></li>
             <li><a href="techstack.html">Tech Stack</a></li>
             <li><a href="contributor/contributor.html">Contribute</a></li>
             <li><a href="#community">Community</a></li>
-            <li><a href="login.html">Login</a></li>
+            <li><a href="login.html" id="auth-link">Login</a></li>
           </ul>
         </nav>
       </div>
@@ -104,6 +104,30 @@
 
     <script src="script.js"></script>
     <script src="event.js"></script>
+    <script src="toggle.js"></script>
+    <script>
+      function updateAuthLink() {
+          let loggedInUser = localStorage.getItem("loggedInUser");
+          let authLink = document.getElementById("auth-link");
+  
+          if (loggedInUser) {
+              authLink.innerText = "Logout";
+              authLink.href = "#";
+              authLink.onclick = function () {
+                  logout();
+              };
+          }
+      }
+  
+      function logout() {
+          localStorage.removeItem("loggedInUser");
+          window.location.reload();
+      }
+  
+      // Update login/logout button on page load
+      updateAuthLink();
+  </script>
+  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
         AOS.init({duration: 600, once: false });
