--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Samnwadh - Connect & Collaborate</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="card.css" />
     <link rel="stylesheet" href="toggle.css" />
     <link
       rel="stylesheet"
@@ -13,6 +14,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
   </head>
   <body class="bg-gray-100 text-gray-900">
+
+      <!--greeting card code-->
+
+    <div  class="overlay" id="overlay">
+      <div class="card">
+          <button class="close-btn" onclick="closeCard()">X</button>
+          <h1 id="greeting"></h1>
+      </div>
+    </div>
+
     <header class="bg-blue-600 text-white p-6">
       <div class="container">
         <div class="menu-toggle" id="menu-toggle">&#9776;</div>
@@ -104,6 +115,7 @@
 
     <script src="script.js"></script>
     <script src="event.js"></script>
+    <script src="card.js"></script>
     <script src="toggle.js"></script>
     <script>
       function updateAuthLink() {
