subscribe to newsletter feature done

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -81,6 +81,18 @@
     <!-- footer section -->
     <footer class="bg-blue-600 text-white py-8">
       <div class="footer-container">
+        <div class="newsletter">
+          <h3>Subscribe to our Newsletter</h3>
+          <form id="subscribeForm">
+            <input
+              type="email"
+              id="emailInput"
+              placeholder="Enter your email"
+              required
+            />
+            <button class="submit" type="submit">Subscribe</button>
+          </form>
+        </div>
         <!-- Footer Links (Right Side) -->
         <div class="footer-links">
           <a href="about.html" class="text-white hover:underline">About Us</a>
