--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -102,6 +102,8 @@
           <a href="faq.html" class="text-white hover:underline">FAQ</a>
           <a href="feedback.html" class="text-white hover:underline"
             > Feedback </a>
+          <a href="blog.html" class="text-white hover:underline"
+            > Blog </a>
           <a href="privacy.html" class="text-white hover:underline"
             > Privacy Policy </a>
         </div>
