Fixed the date of the signup page in smaller screens

--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -20,7 +20,7 @@
         <input type="file" name="profilepic" class="signup-profilepic" id="profilepic" accept="image/*" required>
         <label for="profilepic" class="lab-signup-profile"><img src="download.png" alt=""></label>
         <input type="text"  class="signup-input" id="signup-name" placeholder="Enter Name">
-        <input type="date" class="signup-input" id="signup-dob">
+        <input type="date" class="signup-input" id="signup-dateofbirth">
         <div class="user-gender">
             <div class="female">
         <input type="radio" name="gender" class="signupinput-gender" id="signup-gender" value="Female">
