--- a/Frontend/contributor/contributor.html
+++ b/Frontend/contributor/contributor.html
@@ -82,7 +82,7 @@
             >Contact Us</a
           >
           <a href="../faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="feedback.html" class="text-white hover:underline"
+          <a href="https://samnwadh.vercel.app/feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
         </div>
