create room added

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -70,6 +70,13 @@
       >
         Get Started
       </a>
+      <a
+        href="#contribute"
+        onclick="window.location.href = 'createRoom.html'"
+        class="bg-yellow-500 text-black py-2 px-6 rounded-lg hover:bg-yellow-400 hover:text-white transition-colors duration-300"
+      >
+        Create Room
+      </a>
     </section>
 
     <section data-aos="fade-up" id="features" class="py-16 bg-white">
