--- a/Frontend/createRoom.html
+++ b/Frontend/createRoom.html
@@ -14,14 +14,14 @@
           type="text"
           id="name"
           class="input-field"
-          placeholder="Enter your name"
+          placeholder="Name"
           required
         />
         <input
           type="text"
           id="roomId"
           class="input-field"
-          placeholder="Enter Room ID"
+          placeholder="Room ID"
           required
         />
 
