--- a/Frontend/techstack.html
+++ b/Frontend/techstack.html
@@ -18,7 +18,7 @@
     <header class="bg-blue-600 text-white p-6">
       <div class="container">
         <div class="menu-toggle" id="menu-toggle">&#9776;</div>
-        <a href="index.html"><img src="logo.png" alt="Samnwadh" /></a>
+        <a href="index.html"><img src="logo.webp" alt="Samnwadh" /></a>
         <nav class="navbar" id="navbar">
           <ul class="nav-links">
             <li><a href="index.html#features">Features</a></li>
