--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,9 +15,8 @@
   </head>
   <body class="bg-gray-100 text-gray-900">
 
-      <!--greeting card code-->
-
-    <div  class="overlay" id="overlay">
+    <!--greeting card code-->
+    <div class="overlay" id="overlay">
       <div class="card">
           <button class="close-btn" onclick="closeCard()">X</button>
           <h1 id="greeting"></h1>
@@ -30,8 +29,6 @@
 
         <a href="index.html"><img src="logo.webp" alt="Samnwadh" class="logo" /></a>
 
-        <a href="index.html"><img src="logo.webp" alt="Samnwadh" /></a>
-
         <nav class="navbar" id="navbar">
           <ul class="nav-links">
             <li><a href="#features">Features</a></li>
@@ -39,9 +36,7 @@
             <li><a href="contributor/contributor.html">Contribute</a></li>
             <li><a href="#community">Community</a></li>
             <li><a href="review.html">Review</a></li>
-            <li><a href="login.html">Login</a></li>
             <li><a href="login.html" id="auth-link">Login</a></li>
-
           </ul>
         </nav>
       </div>
@@ -52,7 +47,7 @@
       <i class="fas fa-arrow-up"></i>
     </button>
 
-    <section  id="hero" class="bg-blue-600 text-white text-center py-24">
+    <section id="hero" class="bg-blue-600 text-white text-center py-24">
       <h2 data-aos="fade-up" class="text-3xl font-bold mb-4">Welcome to Samnwadh!</h2>
       <p data-aos="fade-up" class="text-lg mb-6">
         An open-source platform to connect, share, and collaborate in real-time.
@@ -103,17 +98,11 @@
         <!-- Footer Links (Right Side) -->
         <div class="footer-links">
           <a href="about.html" class="text-white hover:underline">About Us</a>
-          <a href="contact.html" class="text-white hover:underline"
-            >Contact Us</a
-          >
+          <a href="contact.html" class="text-white hover:underline">Contact Us</a>
           <a href="faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="feedback.html" class="text-white hover:underline"
-            > Feedback </a>
-
-          <a href="blog.html" class="text-white hover:underline"
-            > Blog </a>
-          <a href="privacy.html" class="text-white hover:underline"
-            > Privacy Policy </a>
+          <a href="feedback.html" class="text-white hover:underline"> Feedback </a>
+          <a href="blog.html" class="text-white hover:underline"> Blog </a>
+          <a href="privacy.html" class="text-white hover:underline"> Privacy Policy </a>
         </div>
       </div>
 
@@ -122,24 +111,16 @@
         <p>&copy; 2025 Samnwadh. All rights reserved.</p>
         <div class="social-links">
           <a href="https://github.com/ak-0283"><i class="fab fa-github"></i></a>
-          <a href="https://discord.com/users/762235277263241236"
-            ><i class="fa-brands fa-discord"></i
-          ></a>
-          <a href="https://x.com/AK_2805"
-            ><i class="fa-brands fa-x-twitter"></i
-          ></a>
-          <a href="https://www.linkedin.com/in/abhay-kumar-117b4327b/"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
+          <a href="https://discord.com/users/762235277263241236"><i class="fa-brands fa-discord"></i></a>
+          <a href="https://x.com/AK_2805"><i class="fa-brands fa-x-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/abhay-kumar-117b4327b/"><i class="fa-brands fa-linkedin"></i></a>
         </div>
       </div>
     </footer>
 
     <script src="script.js"></script>
     <script src="event.js"></script>
-
     <script src="card.js"></script>
-
     <script src="toggle.js"></script>
     <script>
       function updateAuthLink() {
@@ -160,10 +141,8 @@
           window.location.reload();
       }
   
-      // Update login/logout button on page load
       updateAuthLink();
-  </script>
-
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
         AOS.init({duration: 600, once: false });
