reset button functionality done

--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -38,7 +38,7 @@
         <input type="password" class="signup-input" id="signup-confirmpassword" placeholder="Confirm Password" required>
        
         <div class="bttn">
-        <button type="reset" class="reset-button">Reset</button>
+        <button type="reset" class="reset-button" onclick="resetForm()">Reset</button>
         <button class="signup-button" onclick="signup()">Sign Up</button>
     </div>
         <p class="signup-text">Already have an account? <a href="login.html" class="signup-link">Login</a></p>
