--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="blog.css">
     <link rel="stylesheet" href="toggle.css">
-    <style>
+    <!-- <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -111,7 +111,7 @@
                 
             }
         }
-    </style>
+    </style> -->
 </head>
 <body>
 
@@ -129,7 +129,7 @@
             </ul>
           </nav>
         </div>
-      </header>
+    </header>
 
     <!-- Blog Section -->
     <section class="blog-section">
