--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -59,8 +59,7 @@
       </p>
       <a href="#contribute"
         onclick="window.location.href = 'signup.html'"
-        class="bg-yellow-500 text-black py-2 px-6 rounded-lg hover:bg-yellow-400 hover:text-white transition-colors duration-300"
-      >
+        class="home-bttn">
         Get Started
       </a>
     </section>
