--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -30,19 +30,19 @@
 
         <a href="index.html"><img src="logo.webp" alt="Samnwadh" class="logo" /></a>
 
-        <a href="index.html"><img src="logo.webp" alt="Samnwadh" /></a>
-
-        <nav class="navbar" id="navbar">
+        <nav class="navbar" >
           <ul class="nav-links">
             <li><a href="#features">Features</a></li>
             <li><a href="techstack.html">Tech Stack</a></li>
             <li><a href="contributor/contributor.html">Contribute</a></li>
             <li><a href="#community">Community</a></li>
             <li><a href="review.html">Review</a></li>
-            <li><a href="login.html">Login</a></li>
             <li><a href="login.html" id="auth-link">Login</a></li>
-
           </ul>
+          <button type="button" id="darkModeToggle" class="toggle">
+            <span class="icon sun">☀️</span>
+            <span class="icon moon">🌙</span>
+          </button>
         </nav>
       </div>
     </header>
@@ -65,8 +65,8 @@
       </a>
     </section>
 
-    <section data-aos="fade-up" id="features" class="py-16 bg-white">
-      <div data-aos="fade-up" class="container text-center">
+    <section data-aos="fade-up" id="features" >
+      <div data-aos="fade-up" class="container">
         <h3 data-aos="fade-up" class="text-2xl font-bold mb-8">Features</h3>
         <div data-aos="fade-up" class="grid">
           <div class="feature-item">
