--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -168,7 +168,7 @@
           <a href="contact.html" class="text-white hover:underline">Contact Us</a>
           <a href="faq.html" class="text-white hover:underline">FAQ</a>
           <a href="feedback.html" class="text-white hover:underline">Feedback</a>
-          <a href="terms.html" class="text-white hover:underline">Terms & Conditions</a>> Feedback </a>
+          <a href="terms.html" class="text-white hover:underline">Terms & Conditions</a>
           <a href="blog.html" class="text-white hover:underline"> Blog </a>
           <a href="privacy.html" class="text-white hover:underline">Privacy Policy</a>
         </div>
