Made Ui changes to Contact Form

--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -38,6 +38,7 @@
         <input type="text" name="name" placeholder="Name" required />
         <input type="email" name="email" placeholder="Email" required />
         <input type="text" name="address" placeholder="Your Address" required />
+        <input type="tel" name="phone" placeholder="Your Phone" required/>
         <textarea
           name="message"
           rows="4"
@@ -54,6 +55,7 @@
 
         <!-- Custom Confirmation / Success Page -->
         <!-- <input type="hidden" name="redirect" value="https://mywebsite.com/thanks.html"> -->
+         <button type="reset">Reset Form</button>
 
         <button type="submit">Submit Form</button>
 
