--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -35,9 +35,6 @@
         <a href="index.html"
           ><img src="logo.webp" alt="Samnwadh" class="logo"
         /></a>
-
-        <a href="index.html"><img src="logo.webp" alt="Samnwadh" /></a>
-
         <nav class="navbar" id="navbar">
           <ul class="nav-links">
             <li><a href="#features">Features</a></li>
@@ -45,7 +42,7 @@
             <li><a href="contributor/contributor.html">Contribute</a></li>
             <li><a href="#community">Community</a></li>
             <li><a href="review.html">Review</a></li>
-            <li><a href="login.html">Login</a></li>
+
             <li><a href="login.html" id="auth-link">Login</a></li>
           </ul>
         </nav>
@@ -61,23 +58,24 @@
       <h2 data-aos="fade-up" class="text-3xl font-bold mb-4">
         Welcome to Samnwadh!
       </h2>
+
       <p data-aos="fade-up" class="text-lg mb-6">
         An open-source platform to connect, share, and collaborate in real-time.
       </p>
+
       <a
         href="#contribute"
         onclick="window.location.href = 'signup.html'"
-        class="bg-yellow-500 text-black py-2 px-6 rounded-lg hover:bg-yellow-400 hover:text-white transition-colors duration-300"
+        class="home-bttn"
+        >Get Started</a
       >
-        Get Started
-      </a>
+
       <a
         href="#contribute"
         onclick="window.location.href = 'createRoom.html'"
         class="bg-yellow-500 text-black py-2 px-6 rounded-lg hover:bg-yellow-400 hover:text-white transition-colors duration-300"
+        >Create Room</a
       >
-        Create Room
-      </a>
     </section>
 
     <section data-aos="fade-up" id="features" class="py-16 bg-white">
@@ -90,12 +88,14 @@
               Chat instantly with friends and colleagues in real-time.
             </p>
           </div>
+
           <div class="feature-item">
             <h4 data-aos="fade-up">Group Chats</h4>
             <p data-aos="fade-up">
               Create communities and have group discussions.
             </p>
           </div>
+
           <div class="feature-item">
             <h4 data-aos="fade-up">End-to-End Encryption</h4>
             <p data-aos="fade-up">
@@ -176,6 +176,14 @@
             <button class="submit" type="submit">Subscribe</button>
           </form>
         </div>
+        <div class="footerLinksForAdminInfo">
+          <p>📍 Location: xyz, India</p>
+          <p>📞 Phone: <a href="tel:+919876543210">+91 99999 99990</a></p>
+          <p>
+            📧 Email:
+            <a href="mailto:your-email@example.com">your-email@example.com</a>
+          </p>
+        </div>
         <!-- Footer Links (Right Side) -->
         <div class="footer-links">
           <a href="about.html" class="text-white hover:underline">About Us</a>
@@ -183,14 +191,16 @@
             >Contact Us</a
           >
           <a href="faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="feedback.html" class="text-white hover:underline">
-            Feedback
-          </a>
-
+          <a href="feedback.html" class="text-white hover:underline"
+            >Feedback</a
+          >
+          <a href="terms.html" class="text-white hover:underline"
+            >Terms & Conditions</a
+          >
           <a href="blog.html" class="text-white hover:underline"> Blog </a>
-          <a href="privacy.html" class="text-white hover:underline">
-            Privacy Policy
-          </a>
+          <a href="privacy.html" class="text-white hover:underline"
+            >Privacy Policy</a
+          >
         </div>
       </div>
 
@@ -213,12 +223,12 @@
     </footer>
     <script src="feedback.js"></script>
 
+    <script src="feedback.js"></script>
     <script src="script.js"></script>
     <script src="event.js"></script>
-
     <script src="card.js"></script>
-
     <script src="toggle.js"></script>
+
     <script>
       function updateAuthLink() {
         let loggedInUser = localStorage.getItem("loggedInUser");
