feature of review fixed and review links added in every footer

--- a/Frontend/contributor/contributor.html
+++ b/Frontend/contributor/contributor.html
@@ -39,6 +39,7 @@
               <li><a href="../index.html#features">Features</a></li>
               <li><a href="../techstack.html">Tech Stack</a></li>
               <li><a href="contributor.html">Contribute</a></li>
+              <li><a href="../review.html">Reviews</a></li>
               <li><a href="../index.html#community">Community</a></li>
               <li><a href="../login.html">Login</a></li>
             </ul>
@@ -81,6 +82,7 @@
           <a href="../contact.html" class="text-white hover:underline"
             >Contact Us</a
           >
+          <a href="review.html" class="text-white hover:underline">Review</a>
           <a href="../faq.html" class="text-white hover:underline">FAQ</a>
           <a href="https://samnwadh.vercel.app/feedback.html" class="text-white hover:underline"
             >Feedback</a
