--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -190,6 +190,7 @@
           <a href="contact.html" class="text-white hover:underline"
             >Contact Us</a
           >
+          <a href="review.html" class="text-white hover:underline">Review</a>
           <a href="faq.html" class="text-white hover:underline">FAQ</a>
           <a href="feedback.html" class="text-white hover:underline"
             >Feedback</a
