--- a/Frontend/review.html
+++ b/Frontend/review.html
@@ -101,7 +101,7 @@
 
         <nav class="navbar" id="navbar">
           <ul class="nav-links">
-            <li><a href="#features">Features</a></li>
+            <li><a href="index.html">Features</a></li>
             <li><a href="techstack.html">Tech Stack</a></li>
             <li><a href="contributor/contributor.html">Contribute</a></li>
             <li><a href="#community">Community</a></li>
@@ -202,6 +202,7 @@
           <a href="contact.html" class="text-white hover:underline"
             >Contact Us</a
           >
+          <a href="review.html" class="text-white hover:underline">Review</a>
           <a href="faq.html" class="text-white hover:underline">FAQ</a>
           <a href="feedback.html" class="text-white hover:underline"
             >Feedback</a
