--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -128,6 +128,7 @@
             <li><a href="contributor/contributor.html">Contribute</a></li>
             <li><a href="#community">Community</a></li>
             <li><a href="login.html">Login</a></li>
+            <!-- <li><a href="createBlog.html">Create A Blog</a></li> -->
           </ul>
         </nav>
       </div>
@@ -266,5 +267,6 @@
       }
     </script>
     <script src="toggle.js"></script>
+    <script src="blog.js"></script>
   </body>
 </html>
