--- a/Frontend/faq.html
+++ b/Frontend/faq.html
@@ -87,7 +87,7 @@
       />
     </div>
 
-    <section class="py-16 bg-white container mx-auto px-4">
+    <section class=faq-box>
       <h2 data-aos="fade-up" class="text-2xl font-bold text-center mb-8">
         Frequently Asked Questions
       </h2>
