--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -20,10 +20,16 @@
     <link rel="stylesheet" href="homefeedback.css" />
     <style>
       .faq-section {
-        width: 100%;
-        background: white;
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       align-items: center;
+       background-color: white;
+       padding-top:20px ;
       }
-
+      .faq-container{
+        margin-top: 0px;
+      }
       .faq-item h1 {
         color: black;
       }
@@ -180,11 +186,7 @@
       </div>
     </section>
     <!-- faq section -->
-    <section
-      class="py-16 bg-white container mx-auto px-4"
-      class="faq-section"
-      style="width: 100%; background: white"
-    >
+    <section class="faq-section">
       <h2 data-aos="fade-up" class="text-2xl font-bold text-center mb-8">
         Frequently Asked Questions
       </h2>
