--- a/Frontend/techstack.html
+++ b/Frontend/techstack.html
@@ -18,6 +18,9 @@
   </head>
 
   <body>
+    <!-- scroll top button -->
+    <button id="scrollToTopBtn">⬆</button>
+
     <header class="bg-blue-600 text-white p-6">
       <div class="container">
         <div class="menu-toggle" id="menu-toggle">&#9776;</div>
@@ -220,6 +223,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
       AOS.init({ duration: 600, once: false });
+      // Scroll to Top button functionality
+      const scrollToTopBtn = document.getElementById("scrollToTopBtn");
+
+window.onscroll = function () {
+    if (document.documentElement.scrollTop > 100) {
+        scrollToTopBtn.style.display = "block";
+    } else {
+        scrollToTopBtn.style.display = "none";
+    }
+};
+
+scrollToTopBtn.addEventListener("click", function () {
+    window.scrollTo({ top: 0, behavior: "smooth" });
+});
     </script>
   </body>
 </html>
