footer links added

--- a/Frontend/contributor/contributor.html
+++ b/Frontend/contributor/contributor.html
@@ -88,7 +88,7 @@
           <a href="../contact.html" class="text-white hover:underline"
             >Contact Us</a
           >
-          <a href="review.html" class="text-white hover:underline">Review</a>
+          <a href="../review.html" class="text-white hover:underline">Review</a>
           <a href="../faq.html" class="text-white hover:underline">FAQ</a>
           <a href="https://samnwadh.vercel.app/feedback.html" class="text-white hover:underline"
             >Feedback</a
