--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -18,16 +18,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
     />
     <link rel="stylesheet" href="homefeedback.css" />
-    <style>
-      .faq-section {
-        width: 100%;
-        background: white;
-      }
-
-      .faq-item h1 {
-        color: black;
-      }
-    </style>
   </head>
   <body class="bg-gray-100 text-gray-900">
     <!--greeting card code-->
@@ -123,11 +113,7 @@
     </section>
 
     <!-- feedback section -->
-    <section
-      data-aos="fade-up"
-      class="feedback-section"
-      style="background-color: white"
-    >
+    <section data-aos="fade-up" class="feedback-section">
       <div data-aos="fade-up" class="feedback-container">
         <h2 data-aos="fade-up" class="feedback-title">
           We Value Your Feedback!
@@ -181,19 +167,11 @@
       </div>
     </section>
     <!-- faq section -->
-    <section
-      class="py-16 bg-white container mx-auto px-4"
-      class="faq-section"
-      style="width: 100%; background: white"
-    >
+    <section class="py-16 bg-white container mx-auto px-4" class="faq-section">
       <h2 data-aos="fade-up" class="text-2xl font-bold text-center mb-8">
         Frequently Asked Questions
       </h2>
-      <div
-        data-aos="fade-up"
-        class="faq-container"
-        style="background-color: cornsilk"
-      >
+      <div data-aos="fade-up" class="faq-container">
         <div data-aos="fade-up" class="faq-item">
           <h1 data-aos="fade-up" class="question" onclick="toggleAnswer(this)">
             What is Samnwadh? <i class="fas fa-chevron-down"></i>
