Added dark mode in login page

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -14,6 +14,10 @@
         <button class="back-button" onclick="window.location.href = 'index.html'">
             <i class="fa-solid fa-arrow-left fa-xl"></i>
         </button>
+        <button type="button" id="darkModeToggle" class="toggle">
+            <span class="icon sun">☀️</span>
+            <span class="icon moon">🌙</span>
+          </button>
     </nav>
 
     <div class="login-wrapper">
