Created the community page

--- a/Frontend/community.html
+++ b/Frontend/community.html
@@ -21,37 +21,37 @@
             <h3>Our Community</h3>
             <div class="team-members">
               <div class="member">
-                <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVyc29ufGVufDB8fDB8fHww" alt="//">
+                <img src="jen.jpg" alt="//">
                 <h4>Jeniffer Rosh</h4>
                 <p class="role">Frontend Developer</p>
                 <p class="more-info">Jennifer is a frontend developer working on the user interface.</p>
               </div>
               <div class="member">
-                <img src="https://plus.unsplash.com/premium_photo-1689530775582-83b8abdb5020?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cmFuZG9tJTIwcGVyc29ufGVufDB8fDB8fHww" alt="//">
+                <img src="joe.jpg" alt="//">
                 <h4>Abhay</h4>
                 <p class="role">Project Manager</p>
                 <p class="more-info">Abhay leads the team, ensuring timely delivery of projects and effective communication within the team.</p>
               </div>
               <div class="member">
-                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmFuZG9tJTIwcGVyc29ufGVufDB8fDB8fHww" alt="//">
+                <img src="jane.jpg" alt="//">
                 <h4>Joe Dohn</h4>
                 <p class="role">Backend Developer</p>
                 <p class="more-info">Joe is a backend developer working on the backend of the website.</p>
               </div>
               <div class="member">
-                <img src="https://plus.unsplash.com/premium_photo-1689530775582-83b8abdb5020?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cmFuZG9tJTIwcGVyc29ufGVufDB8fDB8fHww" alt="//">
+                <img src="joe.jpg" alt="//">
                 <h4>Alaistair Max</h4>
                 <p class="role">Data Scientist</p>
                 <p class="more-info">Alaistair specializes in data science working on the data.</p>
               </div>
               <div class="member">
-                <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVyc29ufGVufDB8fDB8fHww" alt="//">
+                <img src="jen.jpg" alt="//">
                 <h4>Cally Camille</h4>
                 <p class="role">AI/ML</p>
                 <p class="more-info">Cally Camille is an AI engineer an is working on enhancing the AI section<p>
               </div>
               <div class="member">
-                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cmFuZG9tJTIwcGVyc29ufGVufDB8fDB8fHww" alt="//">
+                <img src="jane.jpg" alt="//">
                 <h4>Jane Smith</h4>
                 <p class="role">Backend Developer</p>
                 <p class="more-info">Jane works on backend architecture, optimizing performance, and ensuring data security
