--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -9,14 +9,37 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
     <link rel="stylesheet" href="blog.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
     <link rel="stylesheet" href="toggle.css" />
-    <!-- <style>
+    <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background: #f4f4f4;
         }
+        #scrollBtn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  background-color: rgb(50, 205, 50);
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 1000;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+}
+#scrollBtn:hover {
+  background-color: rgb(34, 139, 34);
+  transform: scale(1.1);
+  box-shadow: 0px 0px 12px rgba(0, 123, 255, 0.8);
+}
 
         .container {
             width: 90%;
@@ -114,7 +137,7 @@
                 
             }
         }
-    </style> -->
+    </style> 
   </head>
   <body>
     <header class="bg-blue-600 text-white p-6">
@@ -139,6 +162,10 @@
       <div class="container">
         <h1 class="blog-title">Open Source Blogs</h1>
 
+         <!-- scroll button -->
+    <button id="scrollBtn" onclick="scrollToTop()">
+      <i class="fas fa-arrow-up"></i>
+    </button>
         <!-- Search Bar -->
         <input
           type="text"
@@ -267,6 +294,7 @@
       }
     </script>
     <script src="toggle.js"></script>
+    <script src="script.js"></script>
     <script src="blog.js"></script>
   </body>
 </html>
