--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -14,6 +14,10 @@
     <nav class="navbar">
         <button class="back-button" onclick="window.location.href = 'index.html'">
             <i class="fa-solid fa-arrow-left fa-xl"></i>
+            <button type="button" id="darkModeToggle" class="toggle">
+                <span class="icon sun">☀️</span>
+                <span class="icon moon">🌙</span>
+              </button>
         </button>
     </nav>
      <div class="about">
@@ -58,4 +62,5 @@
     
 
 </body>
+<script src="script.js"></script>
 </html>
