--- a/Frontend/contributor/contributor.html
+++ b/Frontend/contributor/contributor.html
@@ -40,7 +40,7 @@
               <li><a href="#features">Features</a></li>
               <li><a href="techstack.html">Tech Stack</a></li>
               <li><a href="contributor/contributor.html">Contribute</a></li>
-              <li><a href="community.html">Community</a></li>
+              <li><a href="../community.html">Community</a></li>
               <li><a href="review.html">Review</a></li>
               <li><a href="login.html" id="auth-link">Login</a></li>
 
