--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -8,11 +8,17 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+  />
     <link rel="stylesheet" href="blog.css" />
     <link rel="stylesheet" href="toggle.css" />
     
   </head>
   <body>
+    <!-- scroll top button -->
+<button id="scrollToTopBtn">⬆</button>
     <header class="bg-blue-600 text-white p-6">
       <div class="container">
         <div class="menu-toggle" id="menu-toggle">&#9776;</div>
@@ -166,8 +172,26 @@
         });
       }
     </script>
+
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="toggle.js"></script>
     <script src="blog.js"></script>
-    <script src="script.js"></script>
+    <script>
+      AOS.init({ duration: 600, once: false });
+      // Scroll to Top button functionality
+      const scrollToTopBtn = document.getElementById("scrollToTopBtn");
+
+window.onscroll = function () {
+    if (document.documentElement.scrollTop > 100) {
+        scrollToTopBtn.style.display = "block";
+    } else {
+        scrollToTopBtn.style.display = "none";
+    }
+};
+
+scrollToTopBtn.addEventListener("click", function () {
+    window.scrollTo({ top: 0, behavior: "smooth" });
+});
+    </script>
   </body>
 </html>
