footer links added in privacy page

--- a/Frontend/privacy.html
+++ b/Frontend/privacy.html
@@ -127,11 +127,18 @@ a:hover {
         <a href="contact.html" class="text-white hover:underline"
           >Contact Us</a
         >
+        <a href="review.html" class="text-white hover:underline">Review</a>
         <a href="faq.html" class="text-white hover:underline">FAQ</a>
         <a href="feedback.html" class="text-white hover:underline"
-          > Feedback </a>
+          >Feedback</a
+        >
+        <a href="terms.html" class="text-white hover:underline"
+          >Terms & Conditions</a
+        >
+        <a href="blog.html" class="text-white hover:underline"> Blog </a>
         <a href="privacy.html" class="text-white hover:underline"
-          > Privacy Policy </a>
+          >Privacy Policy</a
+        >
       </div>
     </div>
 
