--- a/Frontend/terms.html
+++ b/Frontend/terms.html
@@ -96,10 +96,21 @@
     <div class="footer-container">
       <div class="footer-links">
         <a href="about.html" class="text-white hover:underline">About Us</a>
-        <a href="contact.html" class="text-white hover:underline">Contact Us</a>
+        <a href="contact.html" class="text-white hover:underline"
+          >Contact Us</a
+        >
+        <a href="review.html" class="text-white hover:underline">Review</a>
         <a href="faq.html" class="text-white hover:underline">FAQ</a>
-        <a href="feedback.html" class="text-white hover:underline">Feedback</a>
-        <a href="privacy.html" class="text-white hover:underline">Privacy Policy</a>
+        <a href="feedback.html" class="text-white hover:underline"
+          >Feedback</a
+        >
+        <a href="terms.html" class="text-white hover:underline"
+          >Terms & Conditions</a
+        >
+        <a href="blog.html" class="text-white hover:underline"> Blog </a>
+        <a href="privacy.html" class="text-white hover:underline"
+          >Privacy Policy</a
+        >
       </div>
     </div>
     <div class="bottom-footer">
