--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -33,6 +33,22 @@
       .faq-item h1 {
         color: black;
       }
+      .search-container {
+        text-align: center;
+        margin: 10%;
+        margin-bottom: 20px;
+      }
+
+      .search-box {
+        width: 100%;
+        max-width: 400px;
+        padding: 10px;
+        border: 2px solid #ccc;
+        border-radius: 5px;
+
+        font-size: 16px;
+        outline: none;
+      }
     </style>
   </head>
   <body class="bg-gray-100 text-gray-900">
@@ -186,15 +202,21 @@
       </div>
     </section>
     <!-- faq section -->
-    <section class="faq-section">
+    <div class="search-container">
+      <input
+        type="text"
+        id="faq-search"
+        class="search-box"
+        placeholder="Search FAQs..."
+        onkeyup="searchFAQ()"
+      />
+    </div>
+
+    <section class=faq-box>
       <h2 data-aos="fade-up" class="text-2xl font-bold text-center mb-8">
         Frequently Asked Questions
       </h2>
-      <div
-        data-aos="fade-up"
-        class="faq-container"
-        style="background-color: cornsilk"
-      >
+      <div data-aos="fade-up" class="faq-container">
         <div data-aos="fade-up" class="faq-item">
           <h1 data-aos="fade-up" class="question" onclick="toggleAnswer(this)">
             What is Samnwadh? <i class="fas fa-chevron-down"></i>
