added privacy and terms

--- a/Frontend/contributor/contributor.html
+++ b/Frontend/contributor/contributor.html
@@ -93,6 +93,12 @@
           <a href="https://samnwadh.vercel.app/feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
+          <a href="privacy.html" class="text-white hover:underline"
+          >Privacy Policy</a
+          >
+          <a href="terms.html" class="text-white hover:underline"
+            >Terms & Conditions</a
+          >
         </div>
       </div>
 
@@ -229,7 +235,7 @@
 
 </body>
 </html>
-      }
-    </script>
+      
+  
   </body>
 </html>
