--- a/Frontend/faq.html
+++ b/Frontend/faq.html
@@ -87,7 +87,7 @@
       />
     </div>
 
-    <section class=faq-box>
+    <section class="faq-box">
       <h2 data-aos="fade-up" class="text-2xl font-bold text-center mb-8">
         Frequently Asked Questions
       </h2>
@@ -183,9 +183,12 @@
           <a href="feedback.html" class="text-white hover:underline">
             Feedback
           </a>
-          <a href="privacy.html" class="text-white hover:underline">
-            Privacy Policy
-          </a>
+          <a href="privacy.html" class="text-white hover:underline"
+            >Privacy Policy</a
+          >
+          <a href="terms.html" class="text-white hover:underline"
+            >Terms & Conditions</a
+          >
         </div>
       </div>
 
