--- a/Frontend/review.html
+++ b/Frontend/review.html
@@ -211,6 +211,12 @@
           <a href="feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
+          <a href="privacy.html" class="text-white hover:underline"
+            >Privacy Policy</a
+          >
+          <a href="terms.html" class="text-white hover:underline"
+            >Terms & Conditions</a
+          >
         </div>
       </div>
 
