faq page logo modified

--- a/Frontend/faq.html
+++ b/Frontend/faq.html
@@ -28,7 +28,10 @@
         color: #007bff;
         text-decoration: none;
       }
-
+      .logo{
+        margin-left: 10px;
+       
+      }
       a:hover {
         text-decoration: underline;
       }
@@ -60,7 +63,7 @@
     <header class="bg-blue-600 text-white p-6">
       <div class="container">
         <div class="menu-toggle" id="menu-toggle">&#9776;</div>
-        <a href="index.html"><img src="logo.png" alt="Samnwadh" /></a>
+        <a href="index.html"><img  class="logo" src="logo.webp" alt="Samnwadh" /></a>
         <nav class="navbar" id="navbar">
           <ul class="nav-links">
             <li><a href="#features">Features</a></li>
