user proffile added

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -63,6 +63,7 @@
             <li><a href="review.html">Review</a></li>
 
             <li><a href="login.html" id="auth-link">Login</a></li>
+            <li><a href="profile/user.html">Profile</a></li>
           </ul>
           <button type="button" id="darkModeToggle" class="toggle">
             <span class="icon sun">☀️</span>
