added darkmode ui to the terms and condition page

--- a/Frontend/terms.html
+++ b/Frontend/terms.html
@@ -51,6 +51,18 @@
       a:hover {
         text-decoration: underline;
       }
+      .dark-mode h1 {
+        color: goldenrod;
+      }
+      .dark-mode h2 {
+        color: goldenrod;
+      }
+      .dark-mode .containerterms {
+        background-color: #333;
+      }
+      .dark-mode a {
+        color: goldenrod !important;
+      }
     </style>
   </head>
   <body>
