Updated about page

--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <style>
+    .navbar{
+      justify-content: flex-start !important;
+    }
     footer{
-        background: linear-gradient(to right, #4facfe, #00f2fe);
         padding: 10px;
     }
 </style>
