--- a/Frontend/techstack.html
+++ b/Frontend/techstack.html
@@ -27,7 +27,7 @@
         <a href="index.html"><img src="logo.webp" alt="Samnwadh" /></a>
         <nav class="navbar" >
           <ul class="nav-links">
-            <li><a href="#features">Features</a></li>
+            <li><a href="index.html#features">Features</a></li>
             <li><a href="techstack.html">Tech Stack</a></li>
             <li><a href="contributor/contributor.html">Contribute</a></li>
             <li><a href="review.html">Review</a></li>
