darkmode addded in blogs

--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="blog.css" />
     <link rel="stylesheet" href="toggle.css" />
+    <link rel="stylesheet" href="style.css">
     <!-- styling for the add blog page  -->
     <style>
       .add-blog-section {
@@ -58,6 +59,25 @@
 
       .add-blog-form button:hover {
         background: #0056b3;
+      }
+      .dark-mode h1,.dark-mode h2{
+        color: goldenrod
+      }
+      .dark-mode p{
+        color: white;
+      }
+      .dark-mode a{
+        background-color: #333;
+      }
+      .dark-mode .add-blog-section{
+        background-color: #333;
+        color: white;
+
+      }
+      .dark-mode .add-blog-form input,
+      .dark-mode .add-blog-form textarea {
+        background-color: #333;
+        color: white;
       }
     </style>
   </head>
