fixed links of the navbar in contributor page

--- a/Frontend/contributor/contributor.html
+++ b/Frontend/contributor/contributor.html
@@ -39,10 +39,10 @@
 
               <li><a href="../index.html">Features</a></li>
               <li><a href="../techstack.html">Tech Stack</a></li>
-              <li><a href="contributor/contributor.html">Contribute</a></li>
+              <li><a href="./contributor.html">Contribute</a></li>
               <li><a href="../community.html">Community</a></li>
               <li><a href="../review.html">Review</a></li>
-              <li><a href="login.html" id="auth-link">Login</a></li>
+              <li><a href="../login.html" id="auth-link">Login</a></li>
 
             </ul>
             <button type="button" id="darkModeToggle" class="toggle">
